src/test/deca/context/invalid/lvalue_method.deca
// Description :
//    Test d'une lvalue méthode 
//
// Résultats:
//    Ligne 16 : 
//
// Historique:
//    créé le 22/01/2017

class A {
    int x;
    int getX() {
    	return x;
    } 
    int getXBis() {
    	getXBis = getX;
	return x; 
    }
}